--- a/challenge_8.qmd
+++ b/challenge_8.qmd
@@ -20,3 +20,5 @@ categories:
 ```
 
 The last movie I saw in the theater was A Haunting in Venice"
+
+Second Commit question: Today, I at left-over homemade pasta and meatballs I made last night for dinner.
