--- a/challenge_8_desktop.qmd
+++ b/challenge_8_desktop.qmd
@@ -22,3 +22,5 @@ categories:
 The last movie I saw in the theater was A Haunting in Venice"
 
 Second Commit question: Today, I at left-over homemade pasta and meatballs I made last night for dinner.
+
+I have added this and will update using GIT Desktop
